--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,7 +14,7 @@ GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/FirstPersonMap.FirstPersonMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Gameplay/BaseClasses/BP_GameMode.BP_GameMode_C
-GlobalDefaultServerGameMode=None
+GlobalDefaultServerGameMode=/Game/Gameplay/BaseClasses/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
